customInput datepicker position stopgap

--- a/src/assets/sass/custom_input_datepicker.scss
+++ b/src/assets/sass/custom_input_datepicker.scss
@@ -41,6 +41,8 @@
 }
 
 .dp__menu {
+  margin-top: 18px;
+  margin-bottom: 18px;
   font-family: "Roboto" !important;
   border: none !important;
   border-radius: 10px !important;
